crates/flight-hotas-logitech/tests/snapshots/snapshot_tests__g27_brake_pedal.snap
---
source: crates/flight-hotas-logitech/tests/snapshot_tests.rs
expression: state
---
G27State {
    wheel: 1.5259022e-5,
    accelerator: 0.0,
    brake: 1.0,
    clutch: 0.0,
    shift_up: false,
    shift_down: false,
    buttons: 0,
    dpad: 8,
}
