crates/flight-hotas-logitech/tests/snapshots/snapshot_tests__g940_joystick_center.snap
---
source: crates/flight-hotas-logitech/tests/snapshot_tests.rs
expression: state
---
G940InputState {
    x: 0.00024420026,
    y: 0.00024420026,
    rz: 0.00024420026,
    z: 0.0,
    buttons: 0,
    hat: Center,
}
