crates/flight-hotas-logitech/tests/snapshots/snapshot_tests__g940_joystick_full_deflection.snap
---
source: crates/flight-hotas-logitech/tests/snapshot_tests.rs
expression: state
---
G940InputState {
    x: 1.0,
    y: -1.0,
    rz: 1.0,
    z: 1.0,
    buttons: 1048575,
    hat: North,
}
