crates/flight-hotas-logitech/tests/snapshots/snapshot_tests__g940_throttle_full.snap
---
source: crates/flight-hotas-logitech/tests/snapshot_tests.rs
expression: state
---
G940ThrottleState {
    left_throttle: 1.0,
    right_throttle: 1.0,
    buttons: 2047,
}
