crates/flight-hotas-logitech/tests/snapshots/snapshot_tests__g_flight_yoke_center.snap
---
source: crates/flight-hotas-logitech/tests/snapshot_tests.rs
expression: state
---
GFlightYokeInputState {
    axes: GFlightYokeAxes {
        x: -0.00024420026,
        y: -0.00024420026,
        rz: 0.0,
        slider: 0.0,
        slider2: 0.0,
    },
    buttons: GFlightYokeButtons {
        buttons: 0,
        hat: Center,
    },
}
