crates/flight-hotas-logitech/tests/snapshots/snapshot_tests__g_flight_yoke_full_deflection.snap
---
source: crates/flight-hotas-logitech/tests/snapshot_tests.rs
expression: state
---
GFlightYokeInputState {
    axes: GFlightYokeAxes {
        x: 1.0,
        y: -1.0,
        rz: 1.0,
        slider: 1.0,
        slider2: 1.0,
    },
    buttons: GFlightYokeButtons {
        buttons: 4095,
        hat: North,
    },
}
